--- a/indecision/src/styles/components/_button.scss
+++ b/indecision/src/styles/components/_button.scss
@@ -5,7 +5,7 @@
   color: white;
   font-weight: bold;
   font-size: $l-size;
-  margin-bottom: $xl-size;
+  margin-bottom: $m-size;
   width: 100%;
   padding: 2.4rem;
 }
@@ -28,4 +28,10 @@
   border: none;
   color: $light-purple;
   padding: 0;
+}
+
+@media (min-width: $desktop-breakpoint) {
+  .big-button {
+    margin-bottom: $xl-size;
+  }
 }
