--- a/indecision/src/styles/components/_header.scss
+++ b/indecision/src/styles/components/_header.scss
@@ -1,6 +1,6 @@
 .header {
   background: $dark-blue;
-  margin-bottom: $xl-size;
+  margin-bottom: $m-size;
   padding: $m-size 0;
   color: #EAAC4C;
 }
@@ -16,4 +16,10 @@
   font-size: $m-size;
   font-weight: 500;
   margin: 0
+}
+
+@media (min-width: $desktop-breakpoint) {
+  .header {
+    margin-bottom: $xl-size;
+  }
 }
